--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,25 @@
   z-index: 10000;
 }
 
+
+.page-enter {
+  opacity: 0;
+}
+
+.page-enter-active {
+  opacity: 1;
+  transition: opacity 300ms;
+}
+
+.page-exit {
+  opacity: 1;
+}
+
+.page-exit-active {
+  opacity: 0;
+}
+
+
 @media  screen and (max-width:800px) {
   .sidebar{
     z-index: 10000000;
