--- a/src/App.css
+++ b/src/App.css
@@ -4,19 +4,16 @@
   box-shadow: rgb(113 122 131 / 11%) 0px 7px 30px 0px;
 }
 
-.nav-item,
-.navbar {
-  z-index: 10000;
-}
-
 
 .page-enter {
   opacity: 0;
+  transform: scale(0.9);
 }
 
 .page-enter-active {
   opacity: 1;
-  transition: opacity 300ms;
+  transform: scale(1);
+  transition: opacity 300ms, transform 300ms;
 }
 
 .page-exit {
